--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,11 +58,12 @@ services:
       - seek-solr
 
   seek-solr:
-    image: fairdom/seek-solr:8.9
+    image: fairdom/seek-solr:8.11
     container_name: n4h-lap-seek-solr
     restart: always
     environment:
       SOLR_JAVA_MEM: "-Xms512m -Xmx1024m"
+      LOG4J_FORMAT_MSG_NO_LOOKUPS: "true"
     volumes:
       - seek-solr-data:/var/solr/
     entrypoint: ["docker-entrypoint.sh", "solr-precreate", "seek", "/opt/solr/server/solr/configsets/seek_config"]
